# RAGRace

./: .gitignore  README.md  playground.ipynb  pyproject.toml
src/dataloaders/: base.py  factory.py  pubmed.py
src/encoder/: base.py  factory.py  sentence_transformer_encoder.py
src/llms/: base.py  factory.py  gemini.py
src/retrievers/: SimpleCosine.py  base.py  factory.py
src/tokenizers/: CharacterTokenizer.py  base.py  factory.py
src/vector_store/: base.py  factory.py  qdrant.py
